# mailwatch

./: Cargo.toml  README.md
src/: lib.rs  main.rs  mbsync.rs  timer.rs  updater.rs  watcher.rs
