[package]
name = "mailwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
notify = { version = "8.0.0", features = ["serde"] }
once_cell = "1.20.2"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"
utf7-imap = "0.3.2"

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3.16.0"

[profile.release]
opt-level = 3
strip = true
lto = true
